Fix bug #81618: dns_get_record failure on FreeBSD when query for a record type fails.

from fsbruva's insights.